syntax = "proto3";
package m2g.pb;

enum AttributeType {
    NO_ATTRIBUTE = 0;
}
